<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ORFAActivity!</string>
    <string name="app_name">ORFA</string>
    <string name="Word">Hey you</string>
    
    <string name="student_prompt">Select a student from the list below</string>
    <string name="story_prompt">Select a story from the list below</string>
    <string name="enter_number"># of desired buttons</string>
    <string name="button_number">Generate</string>
    <string name="menu_welcome">ORFA</string>
    <string name="menu_start_session">Start New Session</string>
    <string name="menu_edit_Student">Edit Students</string>
    <string name="menu_import_story">Import Story</string>
    <string name="menu_stats">View Statistics</string>
    <string name="menu_assign_sounds">Assign Sounds</string>
    <string name="menu_DbTester">Database Tester</string>
    <string name="unimplemented">This page is not currently implemented.  Please use the back button to navigate back to the main menu</string>
    <string name="error1">Omit</string>
    <string name="error2">Word Order</string>
    <string name="error3">Mispronounce</string>
    <string name="error4">Hesitate</string>
    <string name="error5">Self-Correct</string>
    <string name="clear_incorrect">Undo</string>
    <string name="last_read">Last Word Read</string>
    <string name="package_str">com.cybertrons.orfa</string>
    <string name="check_box">Don\'t show this message again.</string>
    <string name="check_box_main_settings">Display &quot;Time is up!&quot; message at the end of a session.</string>
    <string name="menu_settings">Settings</string>
    

</resources>