<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" 
	    android:gravity="center_horizontal">
	
		<TextView
	        android:id="@+id/welcomeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:text="@string/menu_welcome"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:textColor="#4169e1" />
	    
	    <Button
	        android:id="@+id/buttonStartSession"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:text="@string/menu_start_session" 
        	android:onClick="onClickStartSession"  />
	
	    <Button
	        android:id="@+id/buttonEditStudent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_edit_Student" 
        	android:onClick="onClickEditStudent" />
	
	    <Button
	        android:id="@+id/buttonImportStory"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_import_story" 
        	android:onClick="onClickImportStory" />
	
	    <Button
	        android:id="@+id/buttonAssignSounds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_assign_sounds" 
        	android:onClick="onClickAssignSounds" />
	
	    <Button
	        android:id="@+id/buttonMenuStats"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_stats" 
        	android:onClick="onClickStats" />	
	    <Button
	        android:id="@+id/buttonMenuDbTester"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_DbTester" 
        	android:onClick="onClickDbTester" />
	    
	</LinearLayout>