<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >
	
		<TextView
	        android:id="@+id/welcomeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:text="@string/menu_welcome"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:textColor="#4169e1" />
	    
	    <Button
	        android:id="@+id/buttonStartSession"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:text="@string/menu_start_session" 
        	android:onClick="onClickStartSession"  />
	
	    <Button
	        android:id="@+id/buttonEditStudent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_edit_Student" 
        	android:onClick="onClickEditStudent" />
	
	    <Button
	        android:id="@+id/buttonImportStory"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_import_story" 
        	android:onClick="onClickImportStory" />
	
	    <Button
	        android:id="@+id/buttonAssignSounds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_assign_sounds" 
        	android:onClick="onClickAssignSounds" />
	
	    <Button
	        android:id="@+id/buttonMenuStats"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/menu_stats" 
        	android:onClick="onClickStats" />	

	    <Button
	        android:id="@+id/buttonMenuDbTester"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:onClick="onClickDbTester"
	        android:text="@string/menu_DbTester" />
	    
    <!--  
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        tools:context=".MainActivity" /> 
-->
</LinearLayout>
